--- a/IdentityTestProject/Views/Admin/Index.cshtml
+++ b/IdentityTestProject/Views/Admin/Index.cshtml
@@ -14,24 +14,31 @@
             <th>ID</th>
             <th>Name</th>
             <th>Email</th>
+            <th></th>
         </tr>
-        @if(Model.Count() == 0)
+        @if (Model.Count() == 0)
         {
             <tr><td colspan="3" class="text-center">No User Accounts</td></tr>
         }
         else
         {
-            foreach(AppUser user in Model)
+            foreach (AppUser user in Model)
 
             {
                 <tr>
                     <td>@user.Id</td>
                     <td>@user.UserName</td>
                     <td>@user.Email</td>
+                    <td>
+                        <div class="btn-group">
+                            @Html.ActionLink("Edit", "Edit", new { id = user.Id }, new { @class = "btn btn-info btn-xs" })
+                            @Html.ActionLink("Delete", "Admin", new { id = user.Id }, new { @Class = "btn btn-danger btn-xs" })
+                        </div>
+                    </td>
                 </tr>
             }
         }
     </table>
 </div>
 
-@Html.ActionLink("Create", "Create", null , new { @class = "btn btn-primary" })
+@Html.ActionLink("Create", "Create", null, new { @class = "btn btn-primary" })
