--- a/IdentityTestProject/Views/RoleAdmin/Index.cshtml
+++ b/IdentityTestProject/Views/RoleAdmin/Index.cshtml
@@ -54,5 +54,5 @@
     </div>
 </div>
 
-@Html.ActionLink("Create", "Create", null, new { @class = "btn btn-primary })
+@Html.ActionLink("Create", "Create", null, new { @class = "btn btn-primary" })
 
