Commits for days

--- a/IdentityTestProject/Views/Home/Index.cshtml
+++ b/IdentityTestProject/Views/Home/Index.cshtml
@@ -17,3 +17,5 @@
         </table>
     </div>
 </div>
+
+@Html.ActionLink("Sign Out", "Logout", "Account", null, new { @class = "btn btn-primary" })
